# nuremics-labs

./: .gitignore  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt  ruff.toml
ONE_APP/: studies.json
apps/DEMO/: system.py
apps/DEMO/items/: item1.py  item2.py  item3.py  item4.py
environment/: BASE.yml  CANTILEVER_SHEAR_APP.yml
src/apps/ONE_APP/: README.md  settings.json  system.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/: README.md  system.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/: __init__.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/GeometryProc/: README.md  item.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/GeometryProc/ops/: units.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/LabelingProc/: item.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/LabelingProc/ops/: units.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/MeshProc/: item.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/MeshProc/ops/: units.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/ModelProc/: item.py
src/labs/apps/cms/CANTILEVER_SHEAR_APP/procs/ModelProc/ops/: units.py
src/labs/apps/general/BASE_APP/: README.md  system.py
src/labs/apps/general/BASE_APP/procs/FirstProc/: README.md  item.py
src/labs/apps/general/BASE_APP/procs/FirstProc/ops/: units.py
src/labs/apps/general/BASE_APP/procs/SecondProc/: item.py
src/labs/apps/general/BASE_APP/procs/SecondProc/ops/: units.py
src/labs/apps/general/DEMO_APP/: README.md  __init__.py  system.py
src/labs/apps/general/WATER_CUBE_APP/: system.py
src/labs/apps/general/WATER_CUBE_APP/WaterCubeProc/: item.py
src/labs/ops/cms/bc/: units.py
src/labs/ops/cms/geometry/: units.py  visualize_geometry_occ.py
src/labs/ops/cms/labeling/: units.py  visualize_label.py
src/labs/ops/general/plotting/: units.py
src/labs/ops/general/polygon_geometry/: units.py  units_backup.py
src/labs/ops/general/projectile_model/: units.py
src/labs/ops/general/trajectory_analysis/: units.py
src/labs/procs/general/PolygonGeometryProc/: README.md  __init__.py  item.py
src/labs/procs/general/ProjectileModelProc/: README.md  item.py
src/labs/procs/general/TrajectoryAnalysisProc/: README.md  __init__.py  item.py
src/nuremics_labs/: registery.py  system.py
src/nuremics_labs/apps/general/BASE_APP/: README.md  system.py
src/nuremics_labs/apps/general/BASE_APP/procs/: __init__.py
src/nuremics_labs/apps/general/BASE_APP/procs/FirstProc/: item.py
src/nuremics_labs/apps/general/BASE_APP/procs/SecondProc/: README.md  item.py
src/nuremics_labs/apps/general/DEMO_APP/: README.md  app.yaml  system.py
src/nuremics_labs/ops/general/polygon_geometry/: __init__.py  units.py
src/nuremics_labs/ops/general/projectile_model/: __init__.py  units.py
src/nuremics_labs/ops/general/trajectory_analysis/: __init__.py  units.py
src/nuremics_labs/procs/general/PolygonGeometryProc/: README.md  __init__.py  item.py
src/nuremics_labs/procs/general/ProjectileModelProc/: README.md  __init__.py  item.py
src/nuremics_labs/procs/general/TrajectoryAnalysisProc/: __init__.py  item.py
src/procs/AnalysisProc/: README.md  item.py  utils.py
src/procs/AnotherProc/: README.md  item.py  utils.py
src/procs/OneProc/: README.md  item.py  utils.py
