[project]
name = "nuremics-labs"
version = "1.0.0"
description = "Laboratory of applications developed with the NUREMICS framework"
authors = [
  { name = "Julien SIGUENZA", email = "contact@julien-siguenza.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nuremics @ git+https://github.com/nuremics/nuremics.git@decrease-numpy-version"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = [
  "LICENSE",
  "LICENSE_TRADEMARK",
]

[project.urls]
"Homepage" = "https://github.com/nuremics/nuremics-labs"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
polygon_geometry = [
    "matplotlib>=3.10.3",
]
projectile_model = [
    "pygame>=2.6.1",
    "pymunk>=7.0.1",
    "XlsxWriter>=3.2.3",
]
trajectory_analysis = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
]

PolygonGeometryProc = ["nuremics-labs[polygon_geometry]"]
ProjectileModelProc = ["nuremics-labs[projectile_model]"]
TrajectoryAnalysisProc = ["nuremics-labs[trajectory_analysis]"]
WaterCubeProc = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "torchaudio>=2.7.1",
  "libigl<=2.5.1",
  "genesis-world>=0.2.1",
]

DEMO_APP = [
  "nuremics-labs[PolygonGeometryProc]",
  "nuremics-labs[ProjectileModelProc]",
  "nuremics-labs[TrajectoryAnalysisProc]",
]
WATER_CUBE_APP = [
  "nuremics-labs[WaterCubeProc]",
]

all = [
  "nuremics-labs[DEMO_APP]",
  "nuremics-labs[WATER_CUBE_APP]"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"